// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Range /> render matches snapshots 1`] = `
<ComponentEnhancer(Range)
  activeDotStyle={Object {}}
  allowCross={false}
  className=""
  count={1}
  disabled={false}
  dotStyle={Object {}}
  dots={false}
  handle={[Function]}
  handleStyle={
    Array [
      Object {
        "backgroundColor": "#A18265",
        "border": "1px solid #816850",
      },
      Object {
        "backgroundColor": "#A18265",
        "border": "1px solid #816850",
      },
    ]
  }
  included={true}
  marks={Object {}}
  max={100}
  min={0}
  onAfterChange={[Function]}
  onBeforeChange={[Function]}
  onChange={[Function]}
  prefixCls="rc-slider"
  pushable={false}
  railStyle={Object {}}
  step={1}
  tabIndex={Array []}
  trackStyle={
    Array [
      Object {
        "backgroundColor": "#A18265",
      },
    ]
  }
  value={Array []}
  vertical={false}
/>
`;

exports[`<Range /> render matches snapshots 2`] = `
<ComponentEnhancer(Range)
  activeDotStyle={Object {}}
  allowCross={false}
  className=""
  count={1}
  disabled={false}
  dotStyle={Object {}}
  dots={false}
  handle={[Function]}
  handleStyle={
    Array [
      Object {
        "backgroundColor": "#A18265",
        "border": "1px solid #816850",
      },
      Object {
        "backgroundColor": "#A18265",
        "border": "1px solid #816850",
      },
    ]
  }
  included={true}
  marks={Object {}}
  max={2000}
  min={5}
  onAfterChange={[Function]}
  onBeforeChange={[Function]}
  onChange={[Function]}
  prefixCls="rc-slider"
  pushable={false}
  railStyle={Object {}}
  step={1}
  tabIndex={Array []}
  trackStyle={
    Array [
      Object {
        "backgroundColor": "#A18265",
      },
    ]
  }
  value={Array []}
  vertical={false}
/>
`;
